--- a/android/build.gradle
+++ b/android/build.gradle
@@ -73,6 +73,7 @@ repositories {
 dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'  // From node_modules
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
 
 def configureReactNativePom(def pom) {
