--- a/android/build.gradle
+++ b/android/build.gradle
@@ -72,7 +72,7 @@ repositories {
 
 dependencies {
     //noinspection GradleDynamicVersion
-    implementation "com.facebook.react:react-native:+"  // From node_modules
+    api "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
 
