--- a/android/build.gradle
+++ b/android/build.gradle
@@ -73,6 +73,7 @@ repositories {
 dependencies {
     //noinspection GradleDynamicVersion
     api "com.facebook.react:react-native:+"  // From node_modules
+    api "com.orhanobut:hawk:2.0.1"
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
 
