--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": ">=0.60.0-rc.0 <1.0.x"
   },
   "devDependencies": {
+    "@react-native-community/eslint-config": "^1.0.0",
     "react": "^16.9.0",
     "react-native": "^0.61.5"
   }
