--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "postinstall": "node ../scripts/examples_postinstall.js"
+    "postinstall": "node ../scripts/examples_postinstall.js && yarn cache clean"
   },
   "dependencies": {
     "react": "16.9.0",
