--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -25,10 +25,17 @@
         </receiver>
 
         <service
-            android:name=".services.GeofenceTransitionsJobIntentService"
+            android:name=".services.ReinitialiseGeofencesJobIntentService"
             android:exported="true"
             android:enabled="true"
             android:permission="android.permission.BIND_JOB_SERVICE" />
+
+        <service
+        android:name=".services.GeofenceTransitionsJobIntentService"
+        android:exported="true"
+        android:enabled="true"
+        android:permission="android.permission.BIND_JOB_SERVICE" />
+
         <service android:name=".services.OnGeoFenceEventJavaScriptTaskService" />
 
     </application>
