--- a/android/build.gradle
+++ b/android/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     api 'com.snappydb:snappydb-lib:0.5.2'
     api 'com.esotericsoftware.kryo:kryo:2.24.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation "androidx.work:work-runtime:2.3.4"
 }
 
 def configureReactNativePom(def pom) {
