--- a/example/package.json
+++ b/example/package.json
@@ -11,10 +11,17 @@
     "postinstall": "node ../scripts/examples_postinstall.js && yarn cache clean"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.7",
+    "@react-navigation/native": "^5.1.4",
+    "@react-navigation/stack": "^5.2.9",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-background-geofencing": "file:../",
-    "react-native-permissions": "^2.0.10"
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-permissions": "^2.0.10",
+    "react-native-reanimated": "^1.7.1",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
