--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "postinstall": "node ../scripts/examples_postinstall.js && yarn cache clean"
+    "postinstall": "node ../scripts/examples_postinstall.js && yarn cache clean",
+    "build:android": "npx react-native bundle --dev false --platform android --entry-file index.js --bundle-output ./android/app/src/main/assets/index.android.bundle --assets-dest ./android/app/src/main/res && cd android/ && ./gradlew assembleDebug && cd../"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.9.0",
