--- a/example/android/app/src/main/res/raw/app.json
+++ b/example/android/app/src/main/res/raw/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "example",
-  "displayName": "example"
+  "name": "RNBackgroundGeofencing",
+  "displayName": "RNBackground Geofencing"
 }
