--- a/package.json
+++ b/package.json
@@ -2,18 +2,27 @@
   "name": "react-native-background-geofencing",
   "title": "React Native Background Geofencing",
   "version": "1.0.0",
-  "description": "TODO",
+  "description": "A reliable React Native Geofencing library, that works in the background and survives device restarts",
   "main": "index.js",
+  "typings": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/https://github.com/jgkiano/react-native-background-geofencing.git",
-    "baseUrl": "https://github.com/https://github.com/jgkiano/react-native-background-geofencing"
+    "url": "https://github.com/jgkiano/react-native-background-geofencing/tree/master"
   },
+  "bugs": {
+    "url": "https://github.com/jgkiano/react-native-background-geofencing/issues"
+  },
+  "homepage": "https://github.com/jgkiano/react-native-background-geofencing/tree/master#readme",
   "keywords": [
-    "react-native"
+    "react-native",
+    "geofence",
+    "geofencing",
+    "background",
+    "background geofence",
+    "background geofencing"
   ],
   "author": {
     "name": "Kiano",
