--- a/example/package.json
+++ b/example/package.json
@@ -27,6 +27,7 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "styled-components": "^5.1.0",
     "validator": "^13.0.0"
   },
   "devDependencies": {
