added okcollect online

--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,8 @@
     "build:android": "npx react-native bundle --dev false --platform android --entry-file index.js --bundle-output ./android/app/src/main/assets/index.android.bundle --assets-dest ./android/app/src/main/res && cd android/ && ./gradlew assembleDebug && cd.."
   },
   "dependencies": {
+    "@okhi/core": "^1.1.0",
+    "@okhi/okcollect-manager-react-native": "^1.2.2",
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/checkbox": "^0.3.0",
     "@react-native-community/masked-view": "^0.1.7",
@@ -27,6 +29,7 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-webview": "9.2.2",
     "styled-components": "^5.1.0",
     "validator": "^13.0.0"
   },
