--- a/example/package.json
+++ b/example/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "9.2.2",
     "styled-components": "^5.1.0",
     "validator": "^13.0.0"
