--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -199,3 +199,9 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+project.ext.vectoricons = [
+    iconFontNames: [ 'FontAwesome5_Regular.ttf', 'FontAwesome5_Brands.ttf', 'FontAwesome5_Solid.ttf' ] // Name of the font files you want to copy
+]
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
