added uuid, picker, buffer

--- a/example/package.json
+++ b/example/package.json
@@ -17,8 +17,10 @@
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/checkbox": "^0.3.0",
     "@react-native-community/masked-view": "^0.1.7",
+    "@react-native-community/picker": "^1.5.1",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
+    "buffer": "^5.6.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "16.9.0",
@@ -29,6 +31,7 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "9.2.2",
     "styled-components": "^5.1.0",
