added axios and device-info

--- a/example/package.json
+++ b/example/package.json
@@ -20,12 +20,14 @@
     "@react-native-community/picker": "^1.5.1",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
+    "axios": "^0.19.2",
     "buffer": "^5.6.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-background-geofencing": "file:../",
+    "react-native-device-info": "^5.5.8",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-permissions": "^2.0.10",
     "react-native-reanimated": "^1.7.1",
