--- a/example/ios/OkHiVaaS/Info.plist
+++ b/example/ios/OkHiVaaS/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>RNBackground Geofencing</string>
+	<string>OkHi VaaS</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
