--- a/example/package.json
+++ b/example/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/picker": "^1.5.1",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
+    "@segment/analytics-react-native": "^1.1.1-beta.5",
     "axios": "^0.19.2",
     "buffer": "^5.6.0",
     "lodash": "^4.17.15",
