--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -37,6 +37,12 @@
             android:enabled="true"
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
+        <service
+            android:name=".services.RNLocationProviderChangeBroadcastListener"
+            android:exported="true"
+            android:enabled="true"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+
         <service android:name=".services.RNGeoFenceEventJavaScriptTaskService" />
 
     </application>
