--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -2,6 +2,7 @@ platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 target 'OkHiVaaS' do
+  permissions_path = '../node_modules/react-native-permissions/ios'
   # Pods for OkHiVaaS
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
@@ -34,6 +35,8 @@ target 'OkHiVaaS' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse.podspec"
+  
   target 'OkHiVaaSTests' do
     inherit! :search_paths
     # Pods for testing
