--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     }
   },
   "prettier": {
-    "printWidth": 80,
+    "printWidth": 100,
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5"
@@ -66,5 +66,9 @@
     "tsdx": "^0.13.2",
     "tslib": "^2.0.0",
     "typescript": "^3.9.6"
+  },
+  "dependencies": {
+    "@types/ms": "^0.7.31",
+    "ms": "^2.1.2"
   }
 }
